--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "dependencies": {
+    "jsonwebtoken": "^9.0.2",
+    "node-fetch": "^2.7.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/MANGCHI-CO/mangchibox.git"
